Fixing "control panel" box height when scrollbars always displayed
Same fix as in 66ffa8e214a4f69419c3b849b5f71e76b2b613a5,
but for "contracted" mode of the control panel box.
The previous fix only worked correctly for "expanded" mode.
but for the "contracted control panel" state.

--- a/css/jssynth.scss
+++ b/css/jssynth.scss
@@ -359,7 +359,6 @@ button {
 
 .contracted {
   width: 40px;
-  overflow: hidden;
 }
 
 .contracted > li {
